fix single titles on firefox

--- a/css/site.styl
+++ b/css/site.styl
@@ -334,6 +334,8 @@ body.loading
   position: fixed
   z-index: 888
   top: 0
+  left: 0
+  right: 0
   width: 100%
   box-sizing: border-box
   padding: $margin-basic
